# Image-Viewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  rrun.bat  run.bat
src/: CMakeLists.txt  frame.cpp  frame.hpp  runner.cpp
src/common/: pch.hpp
src/gallery/: CMakeLists.txt  animation.cpp  animation.hpp  datamanager.hpp  gallery.cpp  gallery.hpp
